<resources>
    <string name="app_name" translatable="false">Digidex</string>
    <string name="digimon" translatable="false">Digimon</string>
    <string name="Local">Mis creaciones</string>
    <string name="loading">Cargando....</string>
    <string name="f_digimon_local_data_nombre_del_nuevo_digimon">Nombre del nuevo Digimon</string>
    <string name="f_digimon_local_data_types">Tipo del digimon</string>
    <string name="f_digimon_local_data_attributes">Atributos del digimon</string>
    <string name="f_digimon_local_data_level">Nivel del Digimon</string>
    <string name="f_digimon_local_data_create">Crear Digimon</string>
    <string name="toastCreateLocalData">Debe introducir todos los campos</string>
    <string name="f_digimon_detail_type">Tipo: </string>
    <string name="f_digimon_detail_attribute">Atributo: </string>
    <string name="f_digimon_detail_level">Nivel: </string>

</resources>