<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.local.DigimonLocalDataFragment"
    android:background="#FBA184"
    >
    <ImageView
        android:id="@+id/botonNavegacion"
        android:layout_height="40dp"
        android:layout_width="80dp"
        android:src="@drawable/back"

        >
    </ImageView>

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp"
        android:layout_marginTop="50dp"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/digimonName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/f_digimon_local_data_nombre_del_nuevo_digimon"
            android:inputType="text" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/f_digimon_local_data_types"
            android:inputType="text" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/attribute"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/f_digimon_local_data_attributes"
            android:inputType="text" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/level"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/f_digimon_local_data_level"
            android:inputType="text" />

        <Button
            android:id="@+id/btnCrear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/f_digimon_local_data_create"
            android:backgroundTint="#A6261C"
            />
    </LinearLayout>

</FrameLayout>